// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@tsrx/vue basic > wraps default component exports in defineVaporComponent 1`] = `
"import { defineVaporComponent } from 'vue-jsx-vapor';

const App__static1 = <div>{'Hello'}</div>;

export default defineVaporComponent(function App() {
	return App__static1;
});"
`;

exports[`@tsrx/vue basic > wraps named component exports in defineVaporComponent 1`] = `
"import { defineVaporComponent } from 'vue-jsx-vapor';

const App__static1 = <div>{'Hello'}</div>;

export const App = defineVaporComponent(function App() {
	return App__static1;
});"
`;
